--- a/package.json
+++ b/package.json
@@ -1,33 +1,36 @@
 {
   "name": "@majusss/substitutions-parser",
   "version": "1.0.0",
-  "description": "",
+  "description": "VULCAN substitutions parser for JavaScript",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "files": [
     "/dist"
   ],
-  "dependencies": {
-    "@majusss/substitutions-parser": "github:majusss/substitutions-parser",
-    "cheerio": "^1.0.0",
-    "substitutions-parser": "github:majusss/substitutions-parser"
-  },
-  "devDependencies": {
-    "@types/jest": "^29.5.12",
-    "@types/node": "^22.5.4",
-    "jest": "^29.7.0",
-    "ts-jest": "^29.2.5",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.6.2"
-  },
   "scripts": {
-    "test": "mocha -r ts-node/register test/**/*.ts",
-    "build": "tsc -p tsconfig.build.json"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/majusss/substitutions-parser.git"
+    "build": "tsc --p tsconfig.build.json",
+    "test": "mocha --reporter spec --require ts-node/register test/**/*.ts",
+    "test:zstio": "mocha --reporter spec --require ts-node/register test/zstio.ts"
   },
   "author": "Kacper Majcher <majchermajus@proton.me>",
-  "license": "MIT"
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/majusss/substitutions-parser.git"
+  },
+  "license": "MIT",
+  "devDependencies": {
+    "@types/chai": "^4.3.6",
+    "@types/mocha": "^10.0.1",
+    "@types/node": "^20.10.1",
+    "@typescript-eslint/eslint-plugin": "^6.6.0",
+    "@typescript-eslint/parser": "^6.6.0",
+    "chai": "^4.3.6",
+    "eslint": "^8.49.0",
+    "mocha": "^10.2.0",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.2.2"
+  },
+  "dependencies": {
+    "cheerio": "^1.0.0-rc.12"
+  }
 }
